--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
-@media only screen and (max-width : 768px) {
-
+@media only screen and (max-width: 768px) {
 }
 .brand-box {
   width: 36px;
@@ -13,24 +12,29 @@
   height: 100%;
   object-fit: cover;
 }
-@font-face { /* 애플산돌고딕 폰트 적용 */
+@font-face {
+  /* 애플산돌고딕 폰트 적용 */
   font-family: "Jua";
   src: url("/font/BMJUA_ttf.ttf") format("truetype");
   font-weight: normal;
 }
-html, body, main {
+html,
+body,
+main {
   height: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
   font-family: Jua;
   font-weight: 100;
 }
-html::-webkit-scrollbar, body::-webkit-scrollbar, main::-webkit-scrollbar {
+html::-webkit-scrollbar,
+body::-webkit-scrollbar,
+main::-webkit-scrollbar {
   display: none;
 }
 
 footer {
-  margin: 0!important;
+  margin: 0 !important;
 }
 .btn:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
@@ -40,28 +44,50 @@ footer {
   animation-iteration-count: infinite;
 }
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 .btn {
   color: black;
   --bs-btn-color: #fff;
   --bs-btn-bg: #ffdf8f;
-  --bs-btn-border-color:#ffdf8f;
+  --bs-btn-border-color: #ffdf8f;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-color: black;
   --bs-btn-hover-bg: #fcce5b;
   --bs-btn-hover-border-color: #fcce5b;
-  --bs-btn-focus-shadow-rgb: 49,132,253;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #fce6ae;
   --bs-btn-active-border-color: #fce6ae;
