--- a/views/result.ejs
+++ b/views/result.ejs
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
     <%- include('head.ejs', {title: title}) %>
-    <link href="/stylesheets/index.css" rel="stylesheet">
+    <link href="/stylesheets/result.css" rel="stylesheet">
+    <style>
+        .res-box {
+            width: 100%;
+            height: 100%;
+            border-radius: 5%;
+            overflow: hidden;
+        }
+        .res-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
 <%- include('header.ejs') %>
 <main>
-    <h1>결과!</h1>
     <%if(path === 'mbti') { %>
-        <%- include(`./components/mbti.ejs`, {result: {image:1, title:'a', desc: 'aaaaa'}}) %>
+        <%- include(`./components/mbti.ejs`, { image: result.image, title: result.title, desc: result.desc }) %>
     <%}%>
     <%if(path === 'average') { %>
         <%- include(`./components/average.ejs`, {data: data}) %>
