--- a/views/components/taste.ejs
+++ b/views/components/taste.ejs
@@ -5,7 +5,8 @@
     </div>
 
     <ul class="list-group list-group-flush">
-        <% for (let i = 0; i < result.result.length; i++){
+        <%#FIXED: 오타 %>
+        <% for (let i = 0; i < result.length; i++){
             let q = title[i];
             let a = desc[i]; %>
             <li class="list-group-item"> 
