--- a/views/result.ejs
+++ b/views/result.ejs
@@ -26,8 +26,8 @@
     <%if(path === 'average') { %>
         <%- include(`./components/average.ejs`, {title: result.title, desc: result.desc}) %>
     <%}%>
-    <%if(path === 'taste') { %>
-        <%- include(`./components/taste.ejs`, {title: result.title, desc: result.desc}) %>
+    <%if(path === 'tastes') { %>
+        <%- include(`./components/tastes.ejs`, {title: result.title, desc: result.desc}) %>
     <%}%>
 </main>
 <%- include('footer.ejs') %>
