FEAT: result sharing function

--- a/views/layout/mbti.ejs
+++ b/views/layout/mbti.ejs
@@ -5,8 +5,8 @@
     </div>
 
     <div class="card-body">
-        <h3><p class="card-title">당신의 음식은 <%- title[0]%>!</p></h3>
+        <h3><p class="card-title"><%- who%>의 음식은 <%- title[0]%>!</p></h3>
         <p class="card-text"> <%- desc[0]%></p>
     </div>
-    <div class="card-footer" style="background-color: transparent!important;"><button class="btn"><a href="/main" style="color: black; text-decoration: none;">처음으로</a></button></div>
+
 </div>
