--- a/views/layout/mbti.ejs
+++ b/views/layout/mbti.ejs
@@ -1,12 +1,14 @@
 <div class="card" style="width: 100%!important; text-align: center;">
-    <div class="card-header" style="background-color: transparent!important;"><h1>결과!</h1></div>
+    <div class="card-header" style="background-color: transparent!important;"><h3><%- titleDesc%></h3></div>
     <div class="res-box">
         <img class="res-img card-img-top" src="/images/mbti/<%- image%>.jpeg" alt="Card image cap">
     </div>
 
     <div class="card-body">
-        <h3><p class="card-title"><%- who%>의 음식은 <%- title[0]%>!</p></h3>
+        <h3><p class="card-title"><%- title[0]%>!</p></h3>
+        <% if(flag) {%>
         <p class="card-text"> <%- desc[0]%></p>
+        <%}%>
     </div>
 
 </div>
