--- a/views/layout/tastesFriends.ejs
+++ b/views/layout/tastesFriends.ejs
@@ -1,5 +1,5 @@
 <div class="card" style="width: 100%!important; text-align: center;">
-    <div class="card-header" style="background-color: transparent!important;"><h3><%titleDesc%></h3></div>
+    <div class="card-header" style="background-color: transparent!important;"><h1>결과!</h1></div>
     <div class="res-box">
         <img class="res-img card-img-top" src="/images/tastes/title.jpg" alt="Card image cap">
     </div>
@@ -8,7 +8,7 @@
         <% for (let i = 0; i < title.length; i++){
             let q = title[i];
             let a = desc[i]; %>
-            <li class="list-group-item"> 
+            <li class="list-group-item">
                 <div class="card-body">
                     <h3><p class="card-title">  <%- q%>!</p></h3>
                     <p class="card-text"> <%- a%></p>
