--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,8 @@
     <%- include('../components/head.ejs', {title: title}) %>
     <link href="/stylesheets/index.css" rel="stylesheet">
     <script>
+      console.log('<%- path%>' === '')
+      console.log('<%- path%>')
       async function login() {
         // MARK: axios를 통한 post요청 처리; 입력한 값을 세션에 user_id로 저장함
         await axios.post( '/main', {
@@ -12,8 +14,8 @@
         if('<%- path%>' === '') {
           location.href = '/main'
         }
-        else { // path paramater가 존재하는 경우 친구로부터 전달받음 => 해당 콘텐츠로 쿼리스트링 전송: 친구 아이디 세션에 저장
-          location.href = `/content/<%- path%>?user_id=<%- friend_id%>`
+        else { // path paramater가 존재하는 경우 해당 content로 즉시 이동
+          location.href = `/content/<%- path%>?shared=true`
         }
 
       }
