--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -33,7 +33,7 @@
             document.body.removeChild($textarea);
         }
         function share() {
-            const shareURL = 'http://localhost:3000/' + '?user_id=<%- user_id%>' + '&' + 'path=<%- path%>'
+            const shareURL = 'http://localhost:3000/' + '?user_id=<%- user_id%>' + '&' + 'path=<%- path%>' + '&' + 'shared=true'
             copy(shareURL)
             alert('클립보드에 url이 복사되었어요! 링크를 공유해보세요')
         }
@@ -43,10 +43,17 @@
 <%- include('../components/header.ejs') %>
 <main>
     <%if(path === 'mbti') { %>
-        <%- include(`../layout/mbti.ejs`, { image: result.image, title: result.title, desc: result.desc, who: '당신' }) %>
+        <%- include(`../layout/mbti.ejs`, { image: result.image, title: result.title, desc: result.desc, titleDesc: '당신에게 맞는 음식은...', flag: true}) %>
         <%if(friendResult !== '') { %>
-            <%- include(`../layout/mbti.ejs`, {image: friendResult.image, title: friendResult.title, desc: friendResult.desc, who: '친구'} ) %>
+            <%- include(`../layout/mbti.ejs`, { image: friendResult.image, title: friendResult.title, desc: friendResult.desc, titleDesc: '친구가 선택한 음식은', flag: false}) %>
         <%}%>
+    <%}%>
+    <%if(path === 'tastes') { %>
+        <%if(friendResult !== '') { %>
+            <%- include(`../layout/tastes.ejs`, {titleDesc: '친구를 얼마나 알고 있나요?', title: result.title, desc: result.desc}) %>
+        <%} else {%>
+            <%- include(`../layout/tastes.ejs`, {titleDesc: '당신의 취향 결과에요', title: result.title, desc: result.desc}) %>
+        <%} %>
     <%}%>
     <%if(path === 'average') { %>
         <%- include(`../layout/average.ejs`, {title: result.title, desc: result.desc}) %>
@@ -54,12 +61,7 @@
             <%- include(`../layout/average.ejs`, {title: friendResult.title, desc: friendResult.desc}) %>
         <%}%>
     <%}%>
-    <%if(path === 'tastes') { %>
-        <%- include(`../layout/tastes.ejs`, {title: result.title, desc: result.desc}) %>
-        <%if(friendResult !== '') { %>
-            <%- include(`../layout/tastes.ejs`, {title: friendResult.title, desc: friendResult.desc}) %>
-        <%}%>
-    <%}%>
+
     <div class="d-flex flex-column justify-content-center">
         <button class="btn" onclick="share()" style="margin: 20px;">결과 공유하기</button>
         <button class="btn" style="margin: 20px;"><a href="/main" style="color: black; text-decoration: none;">처음으로</a></button>
