FEAT: 닉네임 자동완성 끄기

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
       <img src="/images/logo.png" alt="소소식탁" class="index-img">
     </div>
     <div class="input-group mb-3">
-      <input id="id" type="text" class="form-control" placeholder="닉네임 입력">
+      <input id="id" type="text" class="form-control" placeholder="닉네임 입력" autocomplete="off">
       <input type="button" class="btn btn-outline-secondary" onclick="login()" value="입력"/>
     </div>
   </main>
