--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom" style="margin: 0!important; padding: 0!important;">
+<footer class="navbar-fixed-bottom" style="margin: 0!important; padding: 0!important;">
     <p class="text-center text-muted" style="margin: 0!important;">&copy; 2022-2023 <a class="text-secondary" href="http://ssossotable.com">ssosso.table</a></p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
