REFACTOR: tablet, pc answerlist ui change
태블릿, pc환경에서 정답 버튼 1줄로 나오는게 보여서 수정하였습니다.

--- a/views/pages/content.ejs
+++ b/views/pages/content.ejs
@@ -24,7 +24,7 @@
                 <div class="progress-bar  bg-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="qBox card-title"></div>
-            <div class="aBox"card-body d-grid gap-2 col-6 mx-auto></div>
+            <div class="aBox d-flex flex-column"card-body d-grid gap-2 col-6 mx-auto></div>
             <button id="back-btn" type="button" class="btn">이전</button>
         </div>
     </div>
