--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <<%- include('../components/head.ejs', {title: title}) %>
+    <%- include('../components/head.ejs', {title: title}) %>
     <link href="/stylesheets/main.css" rel="stylesheet">
 </head>
 <body>
