REFACTOR: main content 크기 수정, 평균 결과페이지 공유하기 버튼  결과 공유하기->> 테스트 공유하기로 수정

--- a/views/layout/average.ejs
+++ b/views/layout/average.ejs
@@ -7,7 +7,13 @@
     <ul class="list-group list-group-flush">
         <% for (let i = 0; i < title.length; i++){
             let q = title[i];
-            let a = desc[i]; %>
+            <% if(qnaList[i] !== undefined) {
+                let a = desc[i];
+            <% } %>
+            <% else {
+                let a = desc[i];
+            <% } %>
+            
             <li class="list-group-item"> 
                 <div class="card-body">
                     <h3><p class="card-title">  <%- q%>!</p></h3>
