--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -35,3 +35,21 @@
   </body>
 
 </html>
+
+
+
+<!--response = ip주소
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+async function getIpClient() {
+  try {
+    const response = await axios.get('https://api.ipify.org?format=json');
+    console.log("ip" + response);
+  } catch (error) {
+    console.error(error);
+  }
+}
+
+getIpClient();
+</script>-->
