--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -15,3 +15,20 @@
 </body>
 
 </html>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+async function getIpClient() {
+  try {
+    const response = await axios.get('https://api.ipify.org?format=json');
+    console.log("ip" + response);
+  } catch (error) {
+    console.error(error);
+  }
+}
+
+getIpClient();
+</script>
