--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -56,6 +56,7 @@
         <%} %>
     <%}%>
     <%if(path === 'average') { %>
+        <canvas id="myChart"></canvas>
         <%- include(`../layout/average.ejs`, {title: result.title, desc: result.desc, titleDesc: '당신의 취향 결과에요'}) %>
         <%if(friendResult !== '') { %>
             <%- include(`../layout/average.ejs`, {title: friendResult.title, desc: friendResult.desc}) %>
@@ -63,7 +64,11 @@
     <%}%>
 
     <div class="d-flex flex-column justify-content-center">
-        <button class="btn" onclick="share()" style="margin: 20px;">결과 공유하기</button>
+        <%if(path === 'average') { %>
+            <button class="btn" onclick="share()" style="margin: 20px;">테스트 공유하기</button>
+        <%} else { %>
+            <button class="btn" onclick="share()" style="margin: 20px;">결과 공유하기</button>
+            <%}%>
         <button class="btn" style="margin: 20px;"><a href="/main" style="color: black; text-decoration: none;">처음으로</a></button>
     </div>
 </main>
